src/styles/Login.module.css
.header {
  /* dev */
  /* border: 1px solid cyan; */

  /* flex */
  display: flex;
  align-items: flex-end;
  justify-content: space-between;

  margin: auto;
  max-width: 45em;
  padding: 1em 1em 0.3em;
}

.container {
  /* dev */
  /* border: 1px solid pink; */

  padding-top: 60px;
  /* padding-top: 15px; */
  width: 300px;
  margin: auto;

  /* flex */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

/* .container h3 {
  align-self: flex-start;
  padding-bottom: 90px;
} */

.loginCard {
  /* dev */
  /* border: 5px solid red; */

  /* From https://css.glass */
  background: rgba(29, 117, 170, 0.8);
  border-radius: 12px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(6.5px);
  -webkit-backdrop-filter: blur(6.5px);
  border: 1px solid rgba(17, 84, 122, 0.5);
  height: 200px;
  width: 100%;
}
.regCard {
  /* dev */
  /* border: 5px solid red; */

  /* From https://css.glass */
  background: rgba(29, 117, 170, 0.8);
  border-radius: 12px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(6.5px);
  -webkit-backdrop-filter: blur(6.5px);
  border: 1px solid rgba(17, 84, 122, 0.5);
  height: 16em;
  /* height: 290px; */
  width: 100%;
}

.form {
  /* dev */
  /* border: 1px solid pink; */

  /* flex */
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 98%;
  justify-content: space-between;
  padding: 5%;
}

.form h5 {
  padding-bottom: 10px;
}

.textInput {
  width: 100%;
  border-radius: 50%;
}

.registerOrLogin {
  /* dev */
  /* border: 1px solid pink; */

  width: 100%;

  /* flex */
  display: flex;
  justify-content: space-between;
  align-items: center;
}
/* .form Button {
  align-self: flex-end;
} */

